module16/knative/2.serving/canary-ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: fn
spec:
  traffic:
    - revisionName: fn-00001
      percent: 50
    - revisionName: fn-00002
      percent: 50
