module16/knative/2.serving/route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: fn
spec:
  traffic:
    - configurationName: fn
      latestRevision: true
      percent: 100
